display:inline's hover behavior is not applied to ::before and ::after pseudo elements https://bugs.webkit.org/show_bug.cgi?id=91723

Patch by Elliott Sprehn <esprehn@gmail.com> on 2013-01-15
Reviewed by Eric Seidel.

Source/WebCore:

When hovering over the anonymous text renderers inside :before and :after
we would correctly detect a hit in InlineTextBox::nodeAtPoint, but would
then fail to set the correct node for the hit test because in
RenderObject::updateHitTestResult node() is null. Instead we should walk
up the render tree to the PseudoElement and treat it as if we hit that.

Test: fast/css-generated-content/hover-inline.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::updateHitTestResult):

LayoutTests:

Add a test that hovering generated content inside an inline element causes
the element to become hovered.

* fast/css-generated-content/hover-inline-expected.txt: Added.
* fast/css-generated-content/hover-inline.html: Added.

Canonical link: https://commits.webkit.org/125124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139739 268f45cc-cd09-0410-ab3c-d52691b4dbfc